src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Alternative_Fax_RE__c</fullName>
        <label>Alternative Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AssocOffice_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AssocOffice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Account_ID_RE__c</fullName>
        <externalId>true</externalId>
        <label>CC Organization ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CC_Account_Name_RE__c</fullName>
        <label>CC Organization Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Account_Phone__c</fullName>
        <inlineHelpText>CC data from the Organization Phone field</inlineHelpText>
        <label>CC Account Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Account_Postal_Code__c</fullName>
        <inlineHelpText>CC unfiltered data for Postal Code</inlineHelpText>
        <label>CC Account Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Description_RE__c</fullName>
        <label>CC Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Industry_RE__c</fullName>
        <label>CC Industry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_New_Account_ID__c</fullName>
        <description>CC organization ID for new organization/account who is taking over from a drop organization</description>
        <label>CC New Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Notes_RE__c</fullName>
        <label>CC Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Parent_Account_ID_RE__c</fullName>
        <externalId>true</externalId>
        <label>CC Parent Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Parent_Account_Name_RE__c</fullName>
        <label>CC Parent Account Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete flag used by Jitterbit</description>
        <label>CC To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Verified_By_RE__c</fullName>
        <description>Raw CC value for the Verified By field so text can be imported.</description>
        <inlineHelpText>Raw CC value for the Verified By field so text can be imported.</inlineHelpText>
        <label>CC Verified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPOrganisationTypeId_RE__c</fullName>
        <externalId>true</externalId>
        <label>CC Organisation Type Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Child_Accounts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Count of related Child Accounts set by Roll up helper.</inlineHelpText>
        <label>Count of Child Accounts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>Created Date</description>
        <formula>CreatedDate</formula>
        <inlineHelpText>Created Date</inlineHelpText>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ForeignOfficesandAssociationsSummary_RE__c</fullName>
        <label>ForeignOfficesandAssociationsSummary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Sector_RE__c</fullName>
        <label>Industry Sector</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsParent__c</fullName>
        <formula>IF(ISBLANK(ParentId),TRUE,FALSE)</formula>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active_RE__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lawyers_is_Estimate_RE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lawyers is Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_RE__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Assistants_RE__c</fullName>
        <label>Number of Assistants</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Branches_RE__c</fullName>
        <label>Number of Branches</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Lawyers_RE__c</fullName>
        <label>Number of Lawyers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Partners_RE__c</fullName>
        <label>Number of Partners</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Type_RE__c</fullName>
        <label>CC Organization Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <description>Displays the Account Owner&apos;s User ID</description>
        <formula>Owner.Id</formula>
        <inlineHelpText>Displays the Account Owner&apos;s User ID</inlineHelpText>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_1__c</fullName>
        <description>Counts this record for roll up and reporting purposes.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Counts this record for roll up and reporting purposes.</inlineHelpText>
        <label>Power of 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Real_Type_RE__c</fullName>
        <label>Real Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_HO_Account__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Id, 
IF(NOT(ISBLANK(Parent.Name)),Parent.Id, 
Id))))), 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Parent.Name)), Parent.Parent.Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Parent.Parent.Name)), Parent.Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Parent.Name)), Parent.Parent.Name, 
IF(NOT(ISBLANK(Parent.Name)),Parent.Name, 
Name))))))</formula>
        <label>Related HO Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sage_Account_Code_RE__c</fullName>
        <externalId>true</externalId>
        <label>Sage Account Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Notes__c</fullName>
        <label>Sales Team Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Region_RE__c</fullName>
        <description>Shipping Address Region from CC</description>
        <inlineHelpText>Shipping Address Region from CC</inlineHelpText>
        <label>Shipping Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GMT-Greenwich Mean Time-GMT</fullName>
                </value>
                <value>
                    <fullName>UTC-Universal Coordinated Time-GMT</fullName>
                </value>
                <value>
                    <fullName>ECT-European Central Time-GMT+1:00</fullName>
                </value>
                <value>
                    <fullName>EET-Eastern European Time-GMT+2:00</fullName>
                </value>
                <value>
                    <fullName>ART-(Arabic) Egypt Standard Time-GMT+2:00</fullName>
                </value>
                <value>
                    <fullName>EAT-Eastern African Time-GMT+3:00</fullName>
                </value>
                <value>
                    <fullName>MET-Middle East Time-GMT+3:30</fullName>
                </value>
                <value>
                    <fullName>NET-Near East Time-GMT+4:00</fullName>
                </value>
                <value>
                    <fullName>PLT-Pakistan Lahore Time-GMT+5:00</fullName>
                </value>
                <value>
                    <fullName>IST-India Standard Time-GMT+5:30</fullName>
                </value>
                <value>
                    <fullName>BST-Bangladesh Standard Time-GMT+6:00</fullName>
                </value>
                <value>
                    <fullName>VST-Vietnam Standard Time-GMT+7:00</fullName>
                </value>
                <value>
                    <fullName>CTT-China Taiwan Time-GMT+8:00</fullName>
                </value>
                <value>
                    <fullName>JST-Japan Standard Time-GMT+9:00</fullName>
                </value>
                <value>
                    <fullName>ACT-Australia Central Time-GMT+9:30</fullName>
                </value>
                <value>
                    <fullName>AET-Australia Eastern Time-GMT+10:00</fullName>
                </value>
                <value>
                    <fullName>SST-Solomon Standard Time-GMT+11:00</fullName>
                </value>
                <value>
                    <fullName>NST-New Zealand Standard Time-GMT+12:00</fullName>
                </value>
                <value>
                    <fullName>MIT-Midway Islands Time-GMT‌-11:00</fullName>
                </value>
                <value>
                    <fullName>HST-Hawaii Standard Time-GMT‌-10:00</fullName>
                </value>
                <value>
                    <fullName>AST-Alaska Standard Time-GMT‌-9:00</fullName>
                </value>
                <value>
                    <fullName>PST-Pacific Standard Time-GMT‌-8:00</fullName>
                </value>
                <value>
                    <fullName>PNT-Phoenix Standard Time-GMT‌-7:00</fullName>
                </value>
                <value>
                    <fullName>MST-Mountain Standard Time-GMT‌-7:00</fullName>
                </value>
                <value>
                    <fullName>CST-Central Standard Time-GMT‌-6:00</fullName>
                </value>
                <value>
                    <fullName>EST-Eastern Standard Time-GMT‌-5:00</fullName>
                </value>
                <value>
                    <fullName>IET-Indiana Eastern Standard Time-GMT‌-5:00</fullName>
                </value>
                <value>
                    <fullName>PRT-Puerto Rico and US Virgin Islands Time-GMT‌-4:00</fullName>
                </value>
                <value>
                    <fullName>CNT-Canada Newfoundland Time-GMT‌-3:30</fullName>
                </value>
                <value>
                    <fullName>AGT-Argentina Standard Time-GMT‌-3:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_Date_RE__c</fullName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified_By_RE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Verified By</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Accounts Verified</relationshipLabel>
        <relationshipName>Accounts_Verified</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Number_of_Branches_RE__c</columns>
        <columns>Created_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Allen_and_Overy</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Allen &amp; Overy</value>
        </filters>
        <label>Allen and Overy</label>
    </listViews>
    <listViews>
        <fullName>Chambers_Account_List_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Industry_Sector_RE__c</columns>
        <columns>CC_Industry_RE__c</columns>
        <columns>Organization_Type_RE__c</columns>
        <columns>CPOrganisationTypeId_RE__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>Shipping_Region_RE__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Chambers Account List View</label>
    </listViews>
    <listViews>
        <fullName>Chambers_UK_Account_List_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Industry_Sector_RE__c</columns>
        <columns>CC_Industry_RE__c</columns>
        <columns>Organization_Type_RE__c</columns>
        <columns>CPOrganisationTypeId_RE__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>Shipping_Region_RE__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS2_COUNTRY</field>
            <operation>equals</operation>
            <value>UK</value>
        </filters>
        <label>Chambers UK Account List View</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Chambers_US_Account_List_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Industry_Sector_RE__c</columns>
        <columns>CC_Industry_RE__c</columns>
        <columns>Organization_Type_RE__c</columns>
        <columns>CPOrganisationTypeId_RE__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>Shipping_Region_RE__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS2_COUNTRY</field>
            <operation>equals</operation>
            <value>USA</value>
        </filters>
        <label>Chambers US Account List View</label>
    </listViews>
    <listViews>
        <fullName>HO_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>- HO</value>
        </filters>
        <label>HO Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.LAST_UPDATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Branch</fullName>
        <active>true</active>
        <description>A location of a law firm</description>
        <label>Branch</label>
    </recordTypes>
    <recordTypes>
        <fullName>Firm</fullName>
        <active>true</active>
        <description>A law firm or a collection of law firm branches</description>
        <label>Firm</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Account_Name_Field_Edits</fullName>
        <active>true</active>
        <description>This validation rule prevents all profiles except System Administrator from changing the account name field</description>
        <errorConditionFormula>AND(
ISCHANGED(Name),
OR($Profile.Name = &quot;Sales Rep&quot;, $Profile.Name = &quot;Sales Management&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>This field is updated by synchronisation with CC. Please contact your System Administrator for help.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Parent_Account_Field_Edits</fullName>
        <active>true</active>
        <description>This validation rule prevents all profiles except System Administrator from changing the account name field</description>
        <errorConditionFormula>AND(
ISCHANGED(ParentId),
OR($Profile.Name = &quot;Sales Rep&quot;, $Profile.Name = &quot;Sales Management&quot;))</errorConditionFormula>
        <errorDisplayField>ParentId</errorDisplayField>
        <errorMessage>This field is updated by synchronisation with CC. Please contact your System Administrator for help.</errorMessage>
    </validationRules>
</CustomObject>